<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogFragments.ChallengeWonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/_19sdp"
        android:background="@drawable/rounded_white_bg"
        android:padding="@dimen/_20sdp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >



        <ImageView
            android:id="@+id/iv_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checked_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        </ImageView>


        <TextView
            android:id="@+id/tv_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_17ssp"
            android:textColor="@color/color_green"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginHorizontal="@dimen/_18sdp"
            app:layout_constraintTop_toBottomOf="@id/iv_checked"
            >

        </TextView>

        <TextView
            android:id="@+id/tv_cong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_by_dennis"
            android:gravity="center"

            android:textSize="@dimen/_14ssp"
            android:textColor="@color/color_gray"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginHorizontal="@dimen/_18sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_challenge"
            >

        </TextView>


        <TextView
            android:id="@+id/tv_reward_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reward_points_won"
            android:gravity="center"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/color_pink"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginHorizontal="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_cong"
            >

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyleWhite"
            android:text="@string/continue_"
            android:layout_marginHorizontal="@dimen/_16ssp"
            android:background="@drawable/btn_round_sky_blue"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_reward_point"
            >

        </androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>