<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/tv_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"

        android:textSize="@dimen/_12ssp"
        android:drawableLeft="@drawable/pink_dot_icon"
        android:drawablePadding="@dimen/_10sdp"
        style="@style/textStyleHeadingPink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </TextView>

    <ImageView
        android:id="@+id/btn_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_right_icon"
        android:padding="@dimen/_5ssp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_exercise"

        >
    </ImageView>

    <TextView
        android:id="@id/expandable_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="lorem ipsum dolor sit amet, consectetur
adipisicing elit, sed do eiusmod tempor
incididunt ut labore et dolore magna
aliqua. Ut enim ad minim veniam, quis
nostrud exercitation ullamco laboris nisi
ut aliquip ex ea commodo consequat. "
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@id/tv_exercise"
        />



    <TextView
        android:id="@+id/tv_see_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10ssp"
        android:text="@string/see_more"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expandable_text"
        >

    </TextView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_see_more"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23sdp"
            android:text="@string/upload_video"
            android:textColor="@color/white"
            android:background="@drawable/btn_round_pink"
            app:layout_constraintTop_toTopOf="parent"
            >

        </androidx.appcompat.widget.AppCompatButton>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_challenge_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/challenge_a_friend"
            android:textColor="@color/white"
            android:background="@drawable/btn_round_sky_blue"
            app:layout_constraintTop_toBottomOf="@id/btn_upload"
            >

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>