<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">



    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="@dimen/_20sdp"
        style="@style/textStyleWhiteTitleBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </TextView>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_back_arrow"
        android:padding="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/tv_tittle"
        app:layout_constraintBottom_toBottomOf="@id/tv_tittle"
        app:layout_constraintLeft_toLeftOf="parent"
        >

    </ImageView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_icon"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tittle"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginBottom="80dp"
        android:paddingHorizontal="@dimen/_35sdp"

        app:layout_constraintTop_toBottomOf="@+id/imgLogo">


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_15sdp"
            android:paddingVertical="@dimen/_12sdp"
            style="@style/textStyleEditText"
            android:textColorHint="@color/color_gray"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_20sdp"
            android:drawableLeft="@drawable/email_icon"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/email_address"
            android:background="@drawable/rounded_stroke"
            >

        </EditText>
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyleEditText"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_22sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:drawableLeft="@drawable/pass_icon"
            android:hint="@string/password"
            android:textColorHint="@color/color_gray"
            android:background="@drawable/rounded_stroke"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            >

        </EditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyleWhite"
            android:text="@string/login"
            android:background="@drawable/btn_round_sky_blue"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintTop_toBottomOf="@id/et_pass"
            >

        </androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>





    <TextView
        android:id="@+id/tv_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_link"
        android:layout_marginTop="@dimen/_40sdp"
        style="@style/textStyleWhiteLinks"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </TextView>

    <TextView
        android:id="@+id/tv_Link_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:layout_marginBottom="@dimen/_20sdp"
        style="@style/textStyleWhiteLinks"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>