<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen_bg"
    android:padding="@dimen/_18sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EventFragment">


    <TextView
        android:id="@+id/tv_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:text="@string/current"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_training"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent">







        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/card_event"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp"

                android:layout_width="72dp"
                android:layout_height="72dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/intro_vid_bg">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                style="@style/textStyleHeadingPink"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintLeft_toRightOf="@id/card_event"
                app:layout_constraintTop_toTopOf="@id/card_event"
                >

            </TextView>

            <TextView
                android:id="@+id/tv_user_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/user_active"
                app:layout_constraintTop_toBottomOf="@id/tv_event_name"
                app:layout_constraintLeft_toLeftOf="@id/tv_event_name"
                >

            </TextView>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_medium"
                android:text="2:00 PM to 6:00 PM"
                app:layout_constraintTop_toBottomOf="@id/tv_user_active"
                app:layout_constraintLeft_toLeftOf="@id/tv_event_name"
                >

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:text="@string/history"
        app:layout_constraintTop_toBottomOf="@id/card_training"
        app:layout_constraintLeft_toLeftOf="parent"
        >

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_event_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_events"
        app:layout_constraintTop_toBottomOf="@id/tv_history"
        app:layout_constraintBottom_toTopOf="@id/btn_create_new"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColor="@color/white"
        android:background="@drawable/btn_round_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        >

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>